--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.3
   alert_dialog: ^1.0.0
+  firebase_auth: ^3.3.6
+  fluttertoast: ^8.0.8
+  wc_flutter_share: ^0.4.0
+  firebase_core: ^1.10.6
+  cloud_firestore: ^3.1.5
+  firebase_storage: ^10.2.5
+  photo_view: ^0.13.0
+  path_provider: ^2.0.2
 
 
 
